sort events into years

--- a/events/2025/2025-05-23-newline-2025.md
+++ b/events/2025/2025-05-23-newline-2025.md
@@ -4,4 +4,4 @@ date: 2025-05-23T00:00:00.000Z
 end: 2025-05-26T00:00:00.000Z
 ---
 
-<span>Check out the  </span><a href="https://newline.gent/"><u>official website</u></a><span>!</span>
+Check out the [official website](https://newline.gent/)!
